--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
       <div class="grid">
 
-        <div class="unit">
-          <i class="i-192">
+        <div class="island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
+          <i class="icon i-192">
             <svg><use xlink:href="images/space-icons.svg#space-bubbles"/></svg>
           </i>
           <div class="">
@@ -29,8 +29,8 @@
           </div>
         </div>
 
-        <div class="unit">
-          <i class="i-192">
+        <div class="island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
+          <i class="icon i-192">
             <svg><use xlink:href="images/space-icons.svg#super-dome"/></svg>
           </i>
           <div class="">
@@ -40,8 +40,8 @@
           </div>
         </div>
 
-        <div class="unit">
-          <i class="i-192">
+        <div class="island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
+          <i class="icon i-192">
             <svg><use xlink:href="images/space-icons.svg#mecha-stilts"/></svg>
           </i>
           <div class="">
