--- a/index.html
+++ b/index.html
@@ -16,42 +16,42 @@
       <h1 class="center-text yotta">Mars colonization structures</h1>
     </div>
 
-      <div class="list-group-inline grid">
+    <div class="list-group-inline grid">
 
-        <div class="space island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
-          <i class="icon i-192">
-            <svg><use xlink:href="images/space-icons.svg#space-bubbles"/></svg>
-          </i>
-          <div class="">
-            <h2 class="tera">Space bubbles</h2>
-            <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
-            <a class="btn btn-ghost" href="">Learn about space bubbles</a>
-          </div>
+      <div class="space island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
+        <i class="icon i-192">
+          <svg><use xlink:href="images/space-icons.svg#space-bubbles"/></svg>
+        </i>
+        <div class="max-length">
+          <h2 class="tera">Space bubbles</h2>
+          <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
+          <a class="btn btn-ghost" href="">Learn about space bubbles</a>
         </div>
-
-        <div class="super island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
-          <i class="icon i-192">
-            <svg><use xlink:href="images/space-icons.svg#super-dome"/></svg>
-          </i>
-          <div class="">
-            <h2 class="tera">Super domes</h2>
-            <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
-            <a class="btn btn-ghost" href="">Learn about super domes</a>
-          </div>
-        </div>
-
-        <div class="mecha island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
-          <i class="icon i-192">
-            <svg><use xlink:href="images/space-icons.svg#mecha-stilts"/></svg>
-          </i>
-          <div class="">
-            <h2 class="tera">Mecha-stilts</h2>
-            <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
-            <a class="btn btn-ghost" href="">Learn about mecha-stilts</a>
-          </div>
-        </div>
-
       </div>
+
+      <div class="super island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
+        <i class="icon i-192">
+          <svg><use xlink:href="images/space-icons.svg#super-dome"/></svg>
+        </i>
+        <div class="max-length">
+          <h2 class="tera">Super domes</h2>
+          <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
+          <a class="btn btn-ghost" href="">Learn about super domes</a>
+        </div>
+      </div>
+
+      <div class="mecha island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
+        <i class="icon i-192">
+          <svg><use xlink:href="images/space-icons.svg#mecha-stilts"/></svg>
+        </i>
+        <div class="max-length">
+          <h2 class="tera">Mecha-stilts</h2>
+          <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
+          <a class="btn btn-ghost" href="">Learn about mecha-stilts</a>
+        </div>
+      </div>
+
+    </div>
 
   </section>
 </body>
