--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 </head>
 <body>
   <section class="island">
-    <div class="">
-      <h1 class="center-text yotta">Mars colonization structures</h1>
-    </div>
+
+    <h1 class="pad-t strong center-text yotta push-2">Mars colonization structures</h1>
 
     <div class="list-group-inline grid">
 
       <div class="space island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
-        <i class="icon i-192">
+        <i class="icon i-192 block center-block push gutter-2">
           <svg><use xlink:href="images/space-icons.svg#space-bubbles"/></svg>
         </i>
         <div class="max-length">
@@ -30,7 +29,7 @@
       </div>
 
       <div class="super island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
-        <i class="icon i-192">
+        <i class="icon i-192 block center-block push gutter-2">
           <svg><use xlink:href="images/space-icons.svg#super-dome"/></svg>
         </i>
         <div class="max-length">
@@ -41,7 +40,7 @@
       </div>
 
       <div class="mecha island unit xs-1 s-1 m-1 l-1-3 xl-1-3">
-        <i class="icon i-192">
+        <i class="icon i-192 block center-block push gutter-2">
           <svg><use xlink:href="images/space-icons.svg#mecha-stilts"/></svg>
         </i>
         <div class="max-length">
